--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.1",
+    "antd": "^5.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.46.1",
-    "react-router-dom": "^6.16.0",
-    "zod": "^3.22.2"
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
