--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
-    "@mui/icons-material": "latest",
+    "@mui/icons-material": "^5.14.11",
     "@mui/material": "latest",
+    "@mui/x-date-pickers": "^6.16.0",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.46.2",
+    "react-hook-form-mui": "^6.5.2",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
