--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "tsc && vite build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server --watch db.json -p 3004",
+    "dev:json": "concurrently \"npm run dev\" \"npm run server\""
   },
   "dependencies": {
     "@emotion/react": "latest",
@@ -27,7 +29,9 @@
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@vitejs/plugin-react": "latest",
+    "concurrently": "^8.2.1",
     "gh-pages": "^6.0.0",
+    "json-server": "^0.17.4",
     "typescript": "latest",
     "vite": "latest"
   }
