--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "latest",
     "@mui/x-date-pickers": "^6.16.0",
+    "axios": "^1.5.1",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.46.2",
